--- a/index.html
+++ b/index.html
@@ -2,30 +2,50 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PRACTICA 4</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@ionic/core/css/ionic.bundle.css" />
     <link rel="stylesheet" href="styles.css">
+    <title>Document</title>
 </head>
 <body>
-    <h1><strong>RECIBO DE COMPRAS</strong></h1>
-    <div class="ion-padding">
-        <ion-item>
-            <ion-input id="art" label="Artículo"></ion-input>
-            <ion-icon name="cart-outline"></ion-icon>
-        </ion-item>
-    </div>
-    <div class="ion-padding">
-        <ion-item>
-            <ion-input id="monto" label="Monto"></ion-input>
-            <ion-icon name="pricetag-outline"></ion-icon>
-        </ion-item>
-    </div>
-    <br>
-    <ion-button id="button">Agregar</ion-button>
-    <h3 id="recibo">RECIBO...</h3>
+    <h1>Grid</h1>
+    <ion-grid>
+        <ion-row>
+          <ion-col size="12" size-md="3">1</ion-col>
+          <ion-col size="12" size-md="3">2</ion-col>
+          <ion-col size="12" size-md="3">3</ion-col>
+          <ion-col size="12" size-md="3">4</ion-col>
+        </ion-row>
+
+        <ion-row>
+            <ion-col>1</ion-col>
+        </ion-row>
+
+        <ion-row>
+            <ion-col size="12" size-md="1">1</ion-col>
+            <ion-col size="12" size-md="1">2</ion-col>
+            <ion-col size="12" size-md="1">3</ion-col>
+            <ion-col size="12" size-md="1">4</ion-col>
+            <ion-col size="12" size-md="1">5</ion-col>
+            <ion-col size="12" size-md="1">6</ion-col>
+            <ion-col size="12" size-md="1">7</ion-col>
+            <ion-col size="12" size-md="1">8</ion-col>
+            <ion-col size="12" size-md="1">9</ion-col>
+            <ion-col size="12" size-md="1">10</ion-col>
+            <ion-col size="12" size-md="1">11</ion-col>
+            <ion-col size="12" size-md="1">12</ion-col>
+          </ion-row>
+
+        <ion-row>
+            <ion-col size="12" size-md="6">1</ion-col>
+            <ion-col size="12" size-md="2">2</ion-col>
+            <ion-col size="12" size-md="3">3</ion-col>
+            <ion-col size="12" size-md="1">4</ion-col>
+        </ion-row>  
+      </ion-grid>
+     
 </body>
 <script type="module" src="https://cdn.jsdelivr.net/npm/@ionic/core/dist/ionic/ionic.esm.js"></script>
 <script nomodule src="https://cdn.jsdelivr.net/npm/@ionic/core/dist/ionic/ionic.js"></script>
-<script src="script.js"></script>
 </html>
